--- a/app/src/main/res/layout/wallet_purchase_preview.xml
+++ b/app/src/main/res/layout/wallet_purchase_preview.xml
@@ -208,7 +208,7 @@
                         android:layout_height="match_parent"
                         android:paddingLeft="@dimen/dimen_10dp"
                         android:layout_weight="1"
-                        android:text="Purchase Date"
+                        android:text="Transfer Date"
                         android:textColor="@color/textColor"
                         android:textSize="16sp"/>
                     <TextView
