--- a/app/src/main/res/layout/fragment_wallet_pay.xml
+++ b/app/src/main/res/layout/fragment_wallet_pay.xml
@@ -122,29 +122,6 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="10dp"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/josefin_sans"
-                            android:text="Merchant ID"
-                            android:textSize="16sp" />
-
-                        <EditText
-                            android:id="@+id/txt_wallet_purchase_mechant_id"
-                            android:layout_width="match_parent"
-                            android:layout_height="45dp"
-                            android:background="@drawable/edittext_corner"
-                            android:inputType="numberDecimal"
-                            android:paddingStart="10dp"
-                            android:textColor="@color/textColor"
-                            android:layout_marginTop="5dp" />
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
                         android:orientation="vertical"
                         android:layout_weight="1"
                         android:layout_marginBottom="10dp">
@@ -189,6 +166,32 @@
                         </RelativeLayout>
 
                     </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/josefin_sans"
+                            android:text="Merchant ID"
+                            android:textSize="16sp" />
+
+                        <EditText
+                            android:id="@+id/edt_purchase_mechant_id"
+                            android:layout_width="match_parent"
+                            android:layout_height="45dp"
+                            android:background="@drawable/edittext_corner"
+                            android:inputType="numberDecimal"
+                            android:paddingStart="10dp"
+                            android:textColor="@color/textColor"
+                            android:layout_marginTop="5dp" />
+                    </LinearLayout>
+
+
                     <LinearLayout
                         android:id="@+id/layout_emaisha_card"
                         android:layout_width="match_parent"
@@ -378,6 +381,30 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="10dp"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="Account Name"
+                                android:textSize="16sp"
+                                android:layout_marginBottom="5dp"
+                                android:fontFamily="@font/josefin_sans" />
+
+                            <EditText
+                                android:id="@+id/pay_account_name"
+                                android:layout_width="match_parent"
+                                android:layout_height="45dp"
+                                android:paddingStart="@dimen/dimen_10dp"
+                                android:background="@drawable/edittext_corner"
+                                android:inputType="text"
+                                android:textColor="@color/textColor"/>
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="10dp"
                             android:orientation="horizontal">
 
 
@@ -434,6 +461,7 @@
 
                         </LinearLayout>
                     </LinearLayout>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -465,7 +493,7 @@
                                 android:layout_weight="0.2" />
 
                             <EditText
-                                android:id="@+id/txt_crop_bill_total"
+                                android:id="@+id/txt_bill_total"
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="0.5"
