--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -103,16 +103,39 @@
                                 android:layout_marginBottom="4dp"
                                 android:text="@string/phone_number"
                                 android:textSize="16sp" />
-
-                            <EditText
-                                android:id="@+id/user_phone"
+                            <LinearLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="50dp"
+                                android:layout_height="45dp"
+                                android:layout_marginTop="10dp"
                                 android:background="@drawable/edittext_corner"
-                                android:inputType="number"
-                                android:paddingStart="@dimen/dimen_10dp"
-                                android:paddingEnd="@dimen/dimen_10dp"
-                                android:textSize="14sp" />
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:id="@+id/text_country_code"
+                                    android:layout_width="0dp"
+                                    android:layout_height="match_parent"
+                                    android:layout_weight="0.3"
+                                    android:background="@drawable/edittext_left_corners_green"
+                                    android:gravity="center"
+                                    android:text="+256"
+                                    android:textColor="@color/white"
+                                    android:textSize="14sp"
+                                    android:textStyle="bold" />
+
+                                <EditText
+                                    android:id="@+id/user_phone"
+                                    android:layout_width="0dp"
+                                    android:layout_height="match_parent"
+                                    android:layout_weight="0.7"
+                                    android:background="@android:color/transparent"
+                                    android:inputType="phone"
+                                    android:maxLength="9"
+                                    android:padding="12dp"
+                                    android:textSize="14sp" />
+
+                            </LinearLayout>
+
+
 
                         </LinearLayout>
 
