--- a/app/src/main/res/layout/login_dialog_otp.xml
+++ b/app/src/main/res/layout/login_dialog_otp.xml
@@ -55,70 +55,67 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="@dimen/dimen_8dp">
         <EditText
             android:id="@+id/otp_code1_et"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/edit_text_bottom_line"
+            android:layout_margin="8dp"
             android:layout_weight="1"
-            android:background="@drawable/outline_primary"
-            android:padding="14dp"
             android:textSize="14sp"
             android:maxLength="1"
             android:inputType="number"/>
         <EditText
             android:id="@+id/otp_code2_et"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
+            android:layout_height="match_parent"
+            android:layout_margin="8dp"
             android:layout_weight="1"
-            android:padding="14dp"
-            android:background="@drawable/outline_primary"
+            android:background="@drawable/edit_text_bottom_line"
             android:textSize="14sp"
             android:maxLength="1"
             android:inputType="number"/>
         <EditText
             android:id="@+id/otp_code3_et"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
+            android:layout_height="match_parent"
+            android:layout_margin="8dp"
             android:layout_weight="1"
-            android:padding="14dp"
-            android:background="@drawable/outline_primary"
+            android:background="@drawable/edit_text_bottom_line"
             android:textSize="14sp"
             android:maxLength="1"
             android:inputType="number"/>
         <EditText
             android:id="@+id/otp_code4_et"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
+            android:layout_height="match_parent"
+            android:layout_margin="8dp"
             android:layout_weight="1"
-            android:padding="14dp"
-            android:background="@drawable/outline_primary"
+            android:background="@drawable/edit_text_bottom_line"
             android:textSize="14sp"
             android:maxLength="1"
             android:inputType="number"/>
         <EditText
             android:id="@+id/otp_code5_et"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
+            android:layout_height="match_parent"
+            android:layout_margin="8dp"
             android:layout_weight="1"
             android:padding="14dp"
-            android:background="@drawable/outline_primary"
+            android:background="@drawable/edit_text_bottom_line"
             android:textSize="14sp"
             android:maxLength="1"
             android:inputType="number"/>
         <EditText
             android:id="@+id/otp_code6_et"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
+            android:layout_height="match_parent"
+            android:layout_margin="8dp"
             android:layout_weight="1"
             android:padding="14dp"
-            android:background="@drawable/outline_primary"
+            android:background="@drawable/edit_text_bottom_line"
             android:textSize="14sp"
             android:maxLength="1"
             android:inputType="number"/>
