Added deposits,withdraw,funds transfer and balance inquiry

--- a/app/src/main/res/layout/emaisha_pay_home.xml
+++ b/app/src/main/res/layout/emaisha_pay_home.xml
@@ -528,7 +528,8 @@
                         app:layout_constraintEnd_toStartOf="@id/layout_funds_transfers"
                         app:layout_constraintStart_toEndOf="@id/layout_account_opening"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toTopOf="@id/layout_withdraw">
+                        app:layout_constraintBottom_toTopOf="@id/layout_withdraw"
+                        android:onClick="openAgentCustomerDeposit">
 
                         <ImageView
                             android:id="@+id/image_deposits"
@@ -566,7 +567,8 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@id/layout_deposits"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toTopOf="@id/layout_balance_inquiry">
+                        app:layout_constraintBottom_toTopOf="@id/layout_balance_inquiry"
+                        android:onClick="openAgentCustomerFundsTransfer">
 
                         <ImageView
                             android:id="@+id/image_funds_transfers"
@@ -643,7 +645,8 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@id/layout_loan_app"
                         app:layout_constraintTop_toBottomOf="@id/layout_deposits"
-                        app:layout_constraintEnd_toStartOf="@id/layout_balance_inquiry">
+                        app:layout_constraintEnd_toStartOf="@id/layout_balance_inquiry"
+                        android:onClick="openAgentCustomerWithdraw">
 
                         <ImageView
                             android:id="@+id/image_withdraw"
@@ -681,7 +684,8 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@id/layout_withdraw"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/layout_funds_transfers">
+                        app:layout_constraintTop_toBottomOf="@id/layout_funds_transfers"
+                        android:onClick="openAgentCustomerBalanceInquiry">
 
                         <ImageView
                             android:id="@+id/image_balance_inquiry"
