--- a/app/src/main/res/layout/dialog_agent_customer_balance_inquiry.xml
+++ b/app/src/main/res/layout/dialog_agent_customer_balance_inquiry.xml
@@ -3,12 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:background="@drawable/dialog_background"
+    android:background="@drawable/outline_primary"
     android:orientation="vertical"
-    tools:context=".activities.WalletHomeActivity">
-
-
+    tools:context=".DailogFragments.AgentCustomerBalanceInquiry">
 
     <LinearLayout
         android:id="@+id/layout_add_money"
@@ -18,18 +15,18 @@
         android:background="@color/colorPrimary">
 
         <TextView
-            android:id="@+id/digital_wallet_title_label"
+            android:id="@+id/agent_bal_inquiry_title_label"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight=".1"
             android:gravity="center"
-            android:text="Add Money"
+            android:text="Balance Inquiry"
             android:textColor="@color/white"
-            android:textSize="25dp"
+            android:textSize="22dp"
             android:textStyle="bold"
             android:textAllCaps="true"/>
         <ImageView
-            android:id="@+id/wallet_transfer_money_close"
+            android:id="@+id/agent_deposit_money_close"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_weight=".9"
@@ -43,8 +40,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingLeft="@dimen/dimen_20dp"
-        android:paddingRight="@dimen/dimen_20dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
         android:background="#F1F5F8">
 
         <LinearLayout
@@ -77,7 +74,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:fontFamily="@font/josefin_sans"
-                    android:text="Receiver Number"
+                    android:text="Mobile Number"
                     android:textSize="@dimen/margin_16" />
 
                 <LinearLayout
@@ -103,21 +100,22 @@
                             android:textStyle="bold"
                             android:textColor="@color/white"
                             android:textSize="14sp" />
+
                         <EditText
-                            android:id="@+id/crop_add_money_mobile_no"
+                            android:id="@+id/agent_deposit_mobile_no"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
-                            android:fontFamily="@font/josefin_sans"
-                            android:inputType="phone"
-                            android:paddingStart="@dimen/dimen_10dp"
-                            android:tag="+256 "
-                            android:maxLength="9"
                             android:layout_weight="0.7"
                             android:background="@android:color/transparent"
-                            android:textColor="@android:color/black"
-                            android:textColorHint="@android:color/black"
+                            android:fontFamily="@font/josefin_sans"
                             android:gravity="center_vertical"
-                            android:paddingLeft="@dimen/dimen_10dp" />
+                            android:inputType="phone"
+                            android:maxLength="9"
+                            android:paddingStart="@dimen/dimen_10dp"
+                            android:paddingLeft="@dimen/dimen_10dp"
+                            android:tag="+256 "
+                            android:textColor="@android:color/black"
+                            android:textColorHint="@android:color/black" />
                     </LinearLayout>
 
 
@@ -126,8 +124,8 @@
             </LinearLayout>
 
 
-             <LinearLayout
-                 android:id="@+id/layout_purpose"
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
@@ -136,81 +134,19 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight=".2"
-                    android:fontFamily="@font/josefin_sans"
-                    android:text="Purpose"
-                    android:textSize="@dimen/margin_16" />
-                 <LinearLayout
-                     android:layout_width="match_parent"
-                     android:layout_height="wrap_content"
-                     android:layout_marginTop="8dp"
-                     android:padding="8dp"
-                     android:background="@drawable/edittext_corner">
-                     <CheckBox
-                         android:id="@+id/checkbox_savings"
-                         android:layout_width="wrap_content"
-                         android:layout_height="wrap_content"
-                         android:layout_weight="1"
-                         android:text="Savings"
-                         android:textSize="16sp"/>
-                     <CheckBox
-                         android:id="@+id/checkbox_agric_inputs"
-                         android:layout_width="wrap_content"
-                         android:layout_height="wrap_content"
-                         android:layout_weight="1"
-                         android:text="Agriculture Inputs"
-                         android:textSize="16sp"/>
-                 </LinearLayout>
-             </LinearLayout>
+                    android:text="Account Number"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/josefin_sans" />
 
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/josefin_sans"
-                    android:text="Amount"
-                    android:textSize="@dimen/margin_16" />
-
-                <LinearLayout
+                <EditText
+                    android:id="@+id/add_money_creditCardNumber"
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
-                    android:layout_marginTop="8dp"
+                    android:paddingStart="@dimen/dimen_10dp"
                     android:background="@drawable/edittext_corner"
-                    android:orientation="horizontal">
-                    <TextView
-
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/edittext_left_corners_green"
-                        android:textColor="@color/white"
-                        android:text="@string/currency"
-                        android:textSize="14sp"
-                        android:textStyle="bold"
-                        android:gravity="center"
-                        android:layout_weight="0.2" />
-
-                    <EditText
-                        android:id="@+id/crop_add_money_amount"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="0.5"
-                        android:paddingStart="@dimen/dimen_10dp"
-                        android:gravity="start|center_vertical"
-                        android:inputType="number"
-                        android:background="@android:color/transparent"
-                        android:textAlignment="viewStart"
-                        android:textColor="@color/textColor"
-                        android:textColorHint="@color/textColorPrimaryDark"/>
-
-
-
-                </LinearLayout>
+                    android:inputType="number"
+                    android:textColor="@color/textColor"
+                    android:layout_marginTop="8dp" />
             </LinearLayout>
 
             <FrameLayout
@@ -270,7 +206,7 @@
                     android:layout_weight="1"
                     android:background="@color/transparent"
                     android:backgroundTint="@color/textColor"
-                    android:text="@string/deposit"
+                    android:text="@string/submit"
                     android:textStyle="bold"
                     android:textAllCaps="true"
                     android:textColor="@color/white"
