--- a/app/src/main/res/layout/dialog_agent_customer_withdraw.xml
+++ b/app/src/main/res/layout/dialog_agent_customer_withdraw.xml
@@ -3,12 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:background="@drawable/dialog_background"
     android:orientation="vertical"
-    tools:context=".activities.WalletHomeActivity">
-
-
+    tools:context=".DailogFragments.AgentCustomerWithdraw">
 
     <LinearLayout
         android:id="@+id/layout_add_money"
@@ -18,18 +14,18 @@
         android:background="@color/colorPrimary">
 
         <TextView
-            android:id="@+id/digital_wallet_title_label"
+            android:id="@+id/agent_bal_inquiry_title_label"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight=".1"
             android:gravity="center"
-            android:text="Add Money"
+            android:text="Withdraw"
             android:textColor="@color/white"
-            android:textSize="25dp"
+            android:textSize="22dp"
             android:textStyle="bold"
             android:textAllCaps="true"/>
         <ImageView
-            android:id="@+id/wallet_transfer_money_close"
+            android:id="@+id/agent_deposit_money_close"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_weight=".9"
@@ -43,8 +39,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingLeft="@dimen/dimen_20dp"
-        android:paddingRight="@dimen/dimen_20dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
         android:background="#F1F5F8">
 
         <LinearLayout
@@ -63,105 +59,30 @@
                 android:text="Insufficient Funds!"
                 android:textColor="@color/device_problem"
                 android:visibility="gone" />
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 android:layout_marginTop="15dp"
-                android:layout_marginBottom="10dp"
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/text_mobile_number"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:fontFamily="@font/josefin_sans"
-                    android:text="Receiver Number"
-                    android:textSize="@dimen/margin_16" />
+                    android:text="Account Number"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/josefin_sans" />
 
-                <LinearLayout
+                <EditText
+                    android:id="@+id/etxt_customer_withdraw_account"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:orientation="horizontal"
-                    android:padding="0dp">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="45dp"
-                        android:layout_alignParentTop="true"
-                        android:background="@drawable/edittext_corner"
-                        android:orientation="horizontal">
-                        <TextView
-                            android:id="@+id/txt_crops_estimated_revenue_units"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="0.3"
-                            android:background="@drawable/edittext_left_corners_green"
-                            android:gravity="center"
-                            android:text="+256"
-                            android:textStyle="bold"
-                            android:textColor="@color/white"
-                            android:textSize="14sp" />
-                        <EditText
-                            android:id="@+id/crop_add_money_mobile_no"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:fontFamily="@font/josefin_sans"
-                            android:inputType="phone"
-                            android:paddingStart="@dimen/dimen_10dp"
-                            android:tag="+256 "
-                            android:maxLength="9"
-                            android:layout_weight="0.7"
-                            android:background="@android:color/transparent"
-                            android:textColor="@android:color/black"
-                            android:textColorHint="@android:color/black"
-                            android:gravity="center_vertical"
-                            android:paddingLeft="@dimen/dimen_10dp" />
-                    </LinearLayout>
-
-
-
-                </LinearLayout>
+                    android:layout_height="45dp"
+                    android:paddingStart="@dimen/dimen_10dp"
+                    android:background="@drawable/edittext_corner"
+                    android:inputType="number"
+                    android:textColor="@color/textColor"
+                    android:layout_marginTop="8dp" />
             </LinearLayout>
-
-
-             <LinearLayout
-                 android:id="@+id/layout_purpose"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight=".2"
-                    android:fontFamily="@font/josefin_sans"
-                    android:text="Purpose"
-                    android:textSize="@dimen/margin_16" />
-                 <LinearLayout
-                     android:layout_width="match_parent"
-                     android:layout_height="wrap_content"
-                     android:layout_marginTop="8dp"
-                     android:padding="8dp"
-                     android:background="@drawable/edittext_corner">
-                     <CheckBox
-                         android:id="@+id/checkbox_savings"
-                         android:layout_width="wrap_content"
-                         android:layout_height="wrap_content"
-                         android:layout_weight="1"
-                         android:text="Savings"
-                         android:textSize="16sp"/>
-                     <CheckBox
-                         android:id="@+id/checkbox_agric_inputs"
-                         android:layout_width="wrap_content"
-                         android:layout_height="wrap_content"
-                         android:layout_weight="1"
-                         android:text="Agriculture Inputs"
-                         android:textSize="16sp"/>
-                 </LinearLayout>
-             </LinearLayout>
 
 
             <LinearLayout
@@ -196,7 +117,7 @@
                         android:layout_weight="0.2" />
 
                     <EditText
-                        android:id="@+id/crop_add_money_amount"
+                        android:id="@+id/etxt_customer_withdraw_amount"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="0.5"
@@ -212,6 +133,73 @@
 
                 </LinearLayout>
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/text_mobile_number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:fontFamily="@font/josefin_sans"
+                    android:text="Phone Number"
+                    android:textSize="@dimen/margin_16" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:orientation="horizontal"
+                    android:padding="0dp">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="45dp"
+                        android:layout_alignParentTop="true"
+                        android:background="@drawable/edittext_corner"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:id="@+id/txt_crops_estimated_revenue_units"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="0.3"
+                            android:background="@drawable/edittext_left_corners_green"
+                            android:gravity="center"
+                            android:text="+256"
+                            android:textStyle="bold"
+                            android:textColor="@color/white"
+                            android:textSize="14sp" />
+
+                        <EditText
+                            android:id="@+id/etxt_customer_withdraw_phone_number"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="0.7"
+                            android:background="@android:color/transparent"
+                            android:fontFamily="@font/josefin_sans"
+                            android:gravity="center_vertical"
+                            android:inputType="phone"
+                            android:maxLength="9"
+                            android:paddingStart="@dimen/dimen_10dp"
+                            android:paddingLeft="@dimen/dimen_10dp"
+                            android:tag="+256 "
+                            android:textColor="@android:color/black"
+                            android:textColorHint="@android:color/black" />
+                    </LinearLayout>
+
+
+
+                </LinearLayout>
+            </LinearLayout>
+
+
+
+
+
+
 
             <FrameLayout
                 android:layout_width="match_parent"
@@ -262,7 +250,7 @@
                 android:gravity="right">
 
                 <Button
-                    android:id="@+id/button_add_money"
+                    android:id="@+id/txt_withdraw_submit"
                     style="@style/Button_DW"
                     android:layout_width="match_parent"
                     android:layout_height="40dip"
@@ -270,7 +258,7 @@
                     android:layout_weight="1"
                     android:background="@color/transparent"
                     android:backgroundTint="@color/textColor"
-                    android:text="@string/deposit"
+                    android:text="@string/submit"
                     android:textStyle="bold"
                     android:textAllCaps="true"
                     android:textColor="@color/white"
